[package]
name = "learning-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.56"
aws-config = "0.47.0"
aws-sdk-dynamodb = "0.17.0"
http = "0.2.8"
hyper = "0.14.20"
lazy_static = "1.4.0"
mockall = "0.11.3"
reqwest = "0.11.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.83"
tokio = { version = "1.20.1", features = ["full"] }
nickel = "*"
mockall_double = "0.3.0"
